Fix mobile alignment, remove unused effects

--- a/posts/2.md
+++ b/posts/2.md
@@ -1,6 +1,6 @@
 ---
-title: "Nei, vi kan ikke ofre alt for nabolagskarakteren"
+title: "Hvordan absurde argumenter fra rike boligeiere påvirker boligbygging"
 date: "2025-02-23"
-excerpt: "Hvordan ville Oslo blitt hvis Grünerløkka måtte bli bygd som trehus?"
+excerpt: "Det er kanskje ikke så lurt å høre på den høylytte minoriteten."
 author: "Gard Aanstad"
 ---
