--- a/posts/3.md
+++ b/posts/3.md
@@ -1,6 +1,6 @@
 ---
-title: "Hvordan absurde argumenter fra rike boligeiere påvirker boligbygging"
+title: "Planene for Økern torgvei 1 har blitt vedtatt"
 date: "2025-02-23"
-excerpt: "Det er kanskje ikke så lurt å høre på den høylytte minoriteten."
+excerpt: "Prosjektet består av et nytt næringskompleks og 260 leiligheter."
 author: "Gard Aanstad"
 ---
