--- a/posts/1.md
+++ b/posts/1.md
@@ -2,7 +2,7 @@
 title: "\"Ett enkelt triks\" for lavere boligpriser"
 date: "2025-02-22"
 excerpt: "Hvordan kan vi få lavere boligpriser i Oslo? Bygg høyere i småhusområder."
-author: "Gard Aanstad"
+author: "Bidragsyter"
 ---
 #### Hvordan kan vi få lavere boligpriser i Oslo? Bygg høyere i småhusområder.
 
