--- a/posts/3.md
+++ b/posts/3.md
@@ -2,5 +2,5 @@
 title: "Planene for Økern torgvei 1 har blitt vedtatt"
 date: "2025-02-23"
 excerpt: "Prosjektet består av et nytt næringskompleks og 260 leiligheter."
-author: "Gard Aanstad"
+author: "Bidragsyter"
 ---
